fixed dotted margin textbox shifting size

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ canvas {
 	margin-top: -8px;
 	margin-bottom: 2px;
 	padding-top: 7px;
-	padding-bottom: 7px;
+	padding-bottom: -20px;
 	background-color: #ffbaba ;
 }
 
